// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_app should match snapshot  1`] = `
<Provider
  store={
    Object {
      "getState": [Function],
      "middleware": [Function],
      "reset": [Function],
      "setState": [Function],
      "subscribe": [Function],
    }
  }
>
  <HeaderComponent />
  <main
    className="main-view"
  >
    <ConnectWrapper />
    <div
      className="main-view-area"
    >
      <HeaderComponent
        success={false}
      />
    </div>
  </main>
  <Container />
</Provider>
`;

exports[`_app should match snapshot if error occurs 1`] = `
<Provider
  store={
    Object {
      "getState": [Function],
      "middleware": [Function],
      "reset": [Function],
      "setState": [Function],
      "subscribe": [Function],
    }
  }
>
  <HeaderComponent />
  <main
    className="main-view"
  >
    <ConnectWrapper />
    <div
      className="main-view-area"
    >
      <HeaderComponent
        error={
          Object {
            "statusCode": 400,
          }
        }
      />
    </div>
  </main>
  <Container />
</Provider>
`;
